# aiogithubapi

./: .codecov.yml  .coveragerc  .devcontainer.json  .gitignore  .pylintrc  LICENSE.md  MANIFEST.in  Makefile  README.md  documentation.md  example.py  netlify.toml  pyproject.toml  renovate.json  requirements.txt  setup.py  test.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  main.workflow  release-drafter.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  feature_request.md  feature_request.yml  issue.md
.github/workflows/: actions.yml  codecov.yml  publish  publish.yml  release-drafter.yml  release.yml  test.yml
aiogithubapi/: __init__.py  aiogithub.py  backoff.py  client.py  const.py  content.py  device.py  exceptions.py  github.py  helpers.py  issue.py  issuecomment.py  ratelimit.py  release.py  repository.py  utils.py
aiogithubapi/common/: __init__.py  const.py  exceptions.py
aiogithubapi/graphql_examples/: __init__.py  repository_tags.py
aiogithubapi/legacy/: __init__.py  client.py  device.py  github.py  helpers.py
aiogithubapi/models/: __init__.py  base.py  clones.py  commit.py  contents.py  device_login.py  events.py  generated.py  git_tree.py  issue.py  issue_comment.py  label.py  license.py  login_oauth.py  meta.py  milestone.py  notification.py  organization.py  owner.py  permissions.py  projects.py  pull_request.py  rate_limit.py  reaction.py  release.py  repository.py  request_data.py  response.py  tag.py  user.py  views.py  workflow_runs.py  workflows.py
aiogithubapi/namespaces/: __init__.py  actions.py  base.py  contents.py  events.py  git.py  issues.py  notifications.py  orgs.py  projects.py  pulls.py  releases.py  repos.py  traffic.py  user.py  users.py
aiogithubapi/objects/: __init__.py  base.py  content.py  ratelimit.py  user.py
aiogithubapi/objects/issue/: label.py
aiogithubapi/objects/login/: __init__.py  device.py  oauth.py
aiogithubapi/objects/organization/: team.py
aiogithubapi/objects/orgs/: team.py
aiogithubapi/objects/repos/: branch.py  commit.py  fork.py  label.py
aiogithubapi/objects/repository/: __init__.py  branch.py  collaborator.py  commit.py  content.py  label.py  pullrequest.py  release.py  traffic.py
aiogithubapi/objects/users/: __init__.py  user.py
generate/: genreate.py  input.json
scripts/: bootstrap  coverage  help  lint  lint-check  motd  set-version  setup  test
tests/: commmon.py  common.py  conftest.py  const.py  test_async_call_api.py  test_backoff.py  test_client.py  test_const.py  test_get_org_repos.py  test_get_repo.py  test_helper.py  test_helpers.py  test_rate_limit.py  test_render_markdown.py
tests/client/: test_client.py  test_construction.py  test_operation.py
tests/device/: __init__.py  test_construction.py  test_device.py  test_device_flow.py  test_device_login.py
tests/fixtures/: device_code.json  emojis.json  gql_simple.json  headers.json  login_device_code.json  login_oauth_access_token.json  meta.json  notifications.json  oauth_access_token.json  oauth_access_token_pending.json  octocat.txt  organizations.json  orgs_octocat.json  orgs_octocat_projects.json  projects_1.json  rate_limit.json  repos_octocat_hello-world.json  repos_octocat_hello-world_commits.json  repos_octocat_hello-world_contents.json  repos_octocat_hello-world_contents_readme.json  repos_octocat_hello-world_events.json  repos_octocat_hello-world_git_trees_master.json  repos_octocat_hello-world_issues.json  repos_octocat_hello-world_issues_1_comments.json  repos_octocat_hello-world_projects.json  repos_octocat_hello-world_pulls.json  repos_octocat_hello-world_releases.json  repos_octocat_hello-world_releases_latest.json  repos_octocat_hello-world_tags.json  repos_octocat_hello-world_traffic_clones.json  repos_octocat_hello-world_traffic_views.json  user.json  user_repos.json  user_starred.json  users_octocat.json  users_octocat_projects.json  versions.json  zen.txt
tests/fixtures/base/: bad_authentication.json  bad_response.json
tests/github/: __init__.py  test_construction.py  test_emojis.py  test_generic.py  test_get_org_repos.py  test_get_rate_limit.py  test_get_repo.py  test_graphql.py  test_markdown.py  test_meta.py  test_octocat.py  test_rate_limit.py  test_render_markdown.py  test_versions.py  test_zen.py
tests/legacy/: test_helpers.py
tests/legacy/client/: test_client.py
tests/legacy/device/: test_device_login.py
tests/legacy/fixtures/: oauth_access_token_error.json
tests/legacy/github/: test_get_org_repos.py  test_get_rate_limit.py  test_get_repo.py  test_graphql.py  test_render_markdown.py
tests/legacy/objects/: test_ratelimit.py
tests/legacy/responses/: __init__.py  base.py  branch.py  contents.py  issue_comments.py  rate_limit.py  releases.py
tests/namespaces/: __init__.py  test_contents.py  test_events.py  test_git.py  test_issues.py  test_notifications.py  test_orgs.py  test_projects.py  test_pulls.py  test_releases.py  test_repos.py  test_traffic.py  test_user.py  test_users.py
tests/objects/: test_ratelimit.py
tests/responses/: base.py  branch.py  clones_fixture.py  commit.py  contents.py  headers.py  issue.py  org_repositories.py  releases.py  repository.py  repository_fixture.py  template  tree.py  views_fixture.py
(+68 files in other folders)
