[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[project]
name = "aiogithubapi"
version = "0"
description = "Asynchronous Python client for the GitHub API"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["readme", "classifiers", "dependencies"]
requires-python = ">=3.8"
authors = [
    { name = "Ludeeus", email = "joasoe@proton.me" },
]
maintainers = [
    { name = "Ludeeus", email = "joasoe@proton.me" },
]

[project.optional-dependencies]
"deprecated-verify" = [
    "sigstore <2",
    "securesystemslib <1",
    "setuptools >=60.0.0"
  ]


[project.urls]
"Repository" = "https://github.com/ludeeus/aiogithubapi"
"Bug tracker" = "https://github.com/ludeeus/aiogithubapi/issues"

[tool.poetry]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

exclude = ['**/__pycache__']
include = ["aiogithubapi", "aiogithubapi.*", "LICENCE.md"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8"
async-timeout = "^5"
backoff = "<3"

# Optional dependencies for deprecated-verify
sigstore = { version = "<2", optional = true }
securesystemslib = { version = "<1", optional = true }
setuptools = { version = ">=60.0.0", optional = true }

[poetry.group.dev.dependencies]
aresponses = "^3.0.0"
black = "^24.8.0"
isort = "^5.12.0"
mypy = "^1.13"
pdoc3 = "^0.11.0"
pylint = "^3.2.7"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"


[tool.black]
line-length = 100
target-version = ['py38']
exclude = 'generated'

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "unsubscriptable-object,duplicate-code"

[tool.coverage.run]
source = ["aiogithubapi"]
omit = ["setup.py", "example.py", "tests/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if sys.version_info.major == "]