[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[project]
name = "aiogithubapi"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["readme", "classifiers", "dependencies", "optional-dependencies"]
requires-python = ">=3.9"
maintainers = [
    { name = "Ludeeus", email = "joasoe@proton.me" },
]
[project.optional-dependencies]
"deprecated-verify" = [
    "sigstore <5",
    "securesystemslib <1",
    "setuptools >=60.0.0"
  ]

[project.urls]
"Repository" = "https://github.com/ludeeus/aiogithubapi"
"Bug tracker" = "https://github.com/ludeeus/aiogithubapi/issues"

[tool.poetry]
name = "aiogithubapi"
version = "0"
description = "Asynchronous Python client for the GitHub API"
authors = ["Ludeeus <ludeeus@ludeeus.dev>"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

exclude = ['**/__pycache__']
include = ["aiogithubapi", "aiogithubapi.*", "LICENCE.md"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
async-timeout = "^5"
backoff = "<3"


[tool.poetry.group.dev.dependencies]
aresponses = "^3.0.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.13"
pdoc3 = "^0.11.0"
pylint = "^3.2.7"
pytest = "^8.3.4"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"


[tool.black]
line-length = 100
target-version = ['py38']
exclude = 'generated'

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "unsubscriptable-object,duplicate-code"

[tool.coverage.run]
source = ["aiogithubapi"]
omit = ["setup.py", "example.py", "tests/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if sys.version_info.major == "]